--- a/src/main.css
+++ b/src/main.css
@@ -1200,7 +1200,8 @@ button#add-friend:active {
 
 #cyber-account-bottom {
   flex-grow: 1;
-  padding: 18px;
+  padding-block: 24px;
+  padding-inline: 18px;
   display: flex;
   flex-direction: column;
   gap: 12px;
