--- a/src/main.css
+++ b/src/main.css
@@ -1235,7 +1235,7 @@ button#add-friend:active {
 
 .account-data-card {
   max-width: 100%;
-  min-height: 70px;
+  min-height: 75px;
   padding: 12px;
   border: 2px solid #999;
   display: flex;
@@ -1246,6 +1246,10 @@ button#add-friend:active {
 
 .account-data-card:last-child {
   flex-grow: 1;
+
+  .content {
+    margin-top: 6px;
+  }
 }
 
 .account-data-card button {
@@ -1283,6 +1287,7 @@ button#add-friend:active {
 
 .account-data-card .content {
   width: 100%;
+  margin-top: 2px;
   font-size: 1rem;
 }
 
@@ -1297,7 +1302,7 @@ button#add-friend:active {
 .account-data-card input {
   background-color: #aaddff35;
   width: 100%;
-  height: 25px;
+  height: 50%;
   padding: 0;
   padding-inline: 6px;
   border: none;
@@ -1312,14 +1317,14 @@ button#add-friend:active {
   outline: none;
 }
 
-.account-data-card input.full {
+.account-data-card input.invalid {
   background-color: #ff42424f;
 }
 
 .account-data-card textarea {
   resize: none;
   background-color: #aaddff35;
-  height: 100%;
+  height: 88%;
   padding: 6px 8px;
   border: none;
   color: white;
@@ -1331,8 +1336,16 @@ button#add-friend:active {
   outline: none;
 }
 
-.account-data-card textarea.full {
+.account-data-card textarea.invalid {
   background-color: #ff42424f;
+}
+
+.account-data-card .error-info {
+  position: absolute;
+  bottom: 4px;
+  left: 16px;
+  color: red;
+  font-size: 12px;
 }
 
 #account-email {
