--- a/src/main.css
+++ b/src/main.css
@@ -1145,6 +1145,7 @@ button#add-friend:active {
 }
 
 #cyber-account > div {
+  position: relative;
   background-color: #ffffff25;
   width: 640px;
   height: 640px;
@@ -1379,10 +1380,85 @@ button#add-friend:active {
   color: #1177ff;
   font-family: inherit;
   font-size: 1.1rem;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 #account-buttons button:hover,
 #account-buttons button:active {
   color: #aaddff;
+}
+
+#account-modal {
+  position: absolute;
+  background-color: #000000dd;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+}
+
+#account-modal > div {
+  background-color: #aaddff35;
+  width: 480px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+}
+
+#account-modal h1 {
+  margin: 0;
+  padding-block: 16px;
+  text-align: center;
+  color: #aaddffbb;
+  font-size: 24px;
+}
+
+#account-modal hr {
+  margin: 0;
+  border-color: #aaddff50;
+}
+
+#account-modal .bottom {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#account-modal span {
+  flex-grow: 1;
+  height: 70%;
+  color: #aaddff;
+  font-size: 21px;
+  display: grid;
+  place-content: center;
+}
+
+#account-modal .buttons {
+  width: 100%;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+#account-modal button {
+  background-color: transparent;
+  padding: 8px 16px;
+  border: 1px solid #aaddff50;
+  color: red;
+  font-family: inherit;
+  font-size: 18px;
+}
+
+#account-modal button:last-child {
+  background-color: #aaddff50;
+  color: #aaddff;
+}
+
+#account-modal button:hover,
+#account-modal button:active {
+  opacity: 70%;
 }
