--- a/src/main.css
+++ b/src/main.css
@@ -1467,7 +1467,7 @@ button#add-friend:active {
 #account-modal .confirm-delete {
   position: relative;
   width: 100%;
-  margin-bottom: 48px;
+  margin-bottom: 64px;
   padding-inline: 24px;
   display: flex;
   flex-direction: column;
@@ -1486,7 +1486,8 @@ button#add-friend:active {
   background-color: transparent;
   width: 70%;
   height: 35px;
-  padding-inline: 8px;
+  padding-left: 8px;
+  padding-right: 36px;
   border: 2px solid #aaddff99;
   color: #aaddff;
   font-family: inherit;
@@ -1495,6 +1496,24 @@ button#add-friend:active {
 
 #account-modal .confirm-delete input:focus {
   outline: none;
+}
+
+#account-modal .confirm-delete .password-visibility {
+  position: absolute;
+  right: 155px;
+  bottom: 0;
+  padding: 6px;
+  width: 35px;
+  height: 35px;
+}
+
+#account-modal .confirm-delete .password-visibility svg {
+  fill: #aaddff99;
+}
+
+#account-modal .confirm-delete .password-visibility svg:hover,
+#account-modal .confirm-delete .password-visibility svg:active {
+  fill: #aaddff;
 }
 
 #account-modal .confirm-delete button {
@@ -1513,4 +1532,14 @@ button#add-friend:active {
 #account-modal .confirm-delete button:hover,
 #account-modal .confirm-delete button:active {
   background-color: #ff000033;
+}
+
+#account-modal .confirm-delete .error-info {
+  position: absolute;
+  top: 72px;
+  left: 0;
+  margin: 0;
+  padding-inline: 28px;
+  text-align: start;
+  color: red;
 }
