Add isEmailVerified feature and require user to have verified email before resetting their account's password

--- a/src/main.css
+++ b/src/main.css
@@ -1385,6 +1385,21 @@ button#add-friend:active {
   font-size: 1.25rem;
 }
 
+#account-email button {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  color: lime;
+  font-family: inherit;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+#account-email button:hover,
+#account-email button:active {
+  color: limegreen;
+}
+
 #account-buttons {
   flex-grow: 1;
   display: flex;
